	* Followup to #14465: Make use of the new Sprite API throughout the TYPO3 Core Backend - Typo in IRRE (Thanks to Steffen Gebert)

2010-06-14  Steffen Kamper  <info@sk-typo3.de>

	* Added missing flags #11461: Serbian flag in sys_language selector 
	* Added missing flags #11807: Flags for belgium is missing
	* Fixed bug #14708: Version selector looks cryptic
	* Fixed bug #14354: Bug: fix percentage of changes in Workspace Manager -> "Show differences inline" (Thanks to Marco Huber)
	* Reverted revision 7901:  #14467: Code cleanup: t3lib_iconWorks::getIconImage is not needed anymore

2010-06-13  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #14640: Improve cookie detection at login screen (Thanks to Steffen Gebert)
	* Fixed bug #14565: There is no way to disable compress and concatenate
	* Fixed bug #14545: [No Title] shown when editing a record on root level (Thanks to Reinhard Fuehricht)
	* Fixed bug #14681: Use self:: for static method calls with classname:: within the same class in t3lib (Thanks to Sebastian Michaelsen)
	* Fixed bug #14538: Icons missing in page tree for "Page contains" pages (Thanks to Steffen Ritter)

2010-06-13  Xavier Perseguers  <typo3@perseguers.ch>

	* Raised DBAL version from 1.1.6 to 1.1.7

2010-06-13  Oliver Hader  <oliver@typo3.org>

	* Cleanup: Updated copyright comments
	* Cleanup: Set SVN end of line property

2010-06-13  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #14624: Use Flash Message in Template module

2010-06-12  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #13895: Bug: getTSConfigVal called with wrong object (Thanks to Andreas Stauder)
	* Fixed bug #14467: Code cleanup: t3lib_iconWorks::getIconImage is not needed anymore (Thanks to Steffen Ritter)
	* Fixed bug #14356: Make disable_controls available for all group fields, not just type "file" (Thanks to Sven Teuber)

2010-06-12  Susanne Moog  <typo3@susanne-moog.de>

	* Follow-up to #8778: Disabled draft workspace: NEWS.txt & forgotten ext_conf_template